# MOS_watering

app/api/routers/: devices.py  telemetry.py
app/schemas/: telemetry.py
app/services/: telemetry_service.py
common/: proto.h
front/src/app/pages/: DeviceAnalytics.tsx
pico-client/: CMakeLists.txt  build.sh
pico-client/bootloader/: CMakeLists.txt
pico-client/common/: dispatcher.c  dispatcher.h  sched.c  sched.h  shared_mem.c  shared_mem.h  tcp_client.c  tcp_client.h  wd_task.c
pico-client/displayer/: CMakeLists.txt  comm_task.c  disp_task.c  dispatch_table.c  dispatch_table.h  main.c  ssd1680.c  tcp_server.c  tcp_server.h  text_renderer.c
pico-client/waterer/: CMakeLists.txt  disp_task.c  dispatch_table.c  dispatch_table.h  dispatcher.c  dispatcher.h  gpio_irq.c  main.c  moist_task.c  pins.h  sched.c  sched.h  temp_task.c  uart_task.c  water_ctx.h  water_task.c  waterer.ld.in  waterer_task.c
serv/: CMakeLists.txt  build.sh  cloud.c  cloud.c.ol  cloud.h  controller.c  creators.c  creators.h  main.c  recver.c  redis.c  serv.c  serv.h
